feat(auth): implement SMTP server MailTrap
